--- a/static/css/board-thread.css
+++ b/static/css/board-thread.css
@@ -123,3 +123,46 @@
     box-shadow:inset 0px 0px 0px 1px rgba(0, 255, 149, 0.9);
     border-radius: 2px !important;
 }
+
+.sort-by-form{
+    display: flex;
+    gap: 0.25rem;
+    margin: 0.25rem 0;
+}
+
+.sort-by-form label{
+    font-size: 0.9rem;
+}
+
+.sort-by-form input{
+    font-weight: 700;
+    font-size: 0.8rem;
+    padding: 0 0.3rem;
+    color: white;
+    background-color: rgba(18, 219, 192, 0.3);
+    border: 1px solid rgb(125, 125, 125);
+    border-radius: 3px;
+    transition: 0.3s;
+}
+
+.sort-by-form input:hover{
+    font-weight: 700;
+    font-size: 0.8rem;
+    padding: 0 0.3rem;
+    color: white;
+    background-color: rgba(18, 219, 192, 0.6);
+    border: 1px solid rgb(125, 125, 125);
+    border-radius: 3px;
+}
+
+.sort-by-form select{
+    font-size: 0.8rem;
+    color: white;
+    background-color: #003b333a;
+    border: 1px solid rgb(125, 125, 125);
+    border-radius: 3px;
+}
+
+.sort-by-form select option{
+    background-color: #00623171;
+}
