--- a/templates/board.html
+++ b/templates/board.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/board-thread.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <title>πchan - /{{ board.id }}</title>
@@ -21,9 +20,9 @@
         <a href="{{ url_for('Admin.home' if api_key else 'Index.home', **({'api_key': api_key} if api_key else {})) }}" class="px-2" style="font-size: 0.8rem; font-family: 'Courier New'; height: fit-content;">Home</a>
     </nav>
     <main class="d-flex w-100 flex-column align-items-center" style="height: fit-content;">
-        <div class="chan-title d-flex justify-content-between border-bottom border-black fw-bold align-items-center align-content-center gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, #1827209c, transparent);">
+        <div class="chan-title d-flex justify-content-between border-bottom border-black fw-bold align-items-center align-content-center gap-3 w-100 px-3 bg-dark" style="background: linear-gradient(to right, var(--bs-label-gradient-start), var(--bs-label-gradient-end));">
             <div class="d-flex align-items-center align-content-center justify-content-start gap-3">
-                <p class="text-success text-ellipsis m-0">/{{ board.id }}</p>
+                <p class="text-ellipsis m-0" style="color: var(--bs-primary);">/{{ board.id }}</p>
                 <p class="m-0" style="height: fit-content; font-size: 2.5rem;">-</p>
                 <p class="m-0" style="height: fit-content; font-size: 2.5rem;">{{ board.name }}</p>    
             </div>
@@ -100,20 +99,28 @@
   
         
         <hr class="border-white w-100 my-0">
-            <div class="d-flex w-100 px-2 justify-content-end">
-                <form class="sort-by-form" action="" method="GET">
-                    <label class="text-white" for="">Sort by:</label>
-                    <select class="" name="" id="sort_id">
+            <div class="d-flex w-100 px-2 overflow-x-auto justify-content-between">
+                <form class="sort-by-form" action="#" method="GET">
+                    <label class="text-white">Style:</label>
+                    <select id="style_id">
+                        <option value="board-thread" >πchan</option>
+                        <option value="tomorrow" >Tomorrow</option>
+                    </select>
+                </form>
+                <link id="theme-style" rel="stylesheet" href="{{ url_for('static', filename='css/board-thread.css') }}">
+                <form class="sort-by-form" action="#" method="GET">
+                    <label class="text-white text-ellipsis">Sort by:</label>
+                    <select id="sort_id">
                         <option value="" {{ 'selected' if not sort }}>Reply count</option>
                         <option value="vote_count" {{ 'selected' if sort == 'vote_count' }}>Vote count</option>
                         <option value="id" {{ 'selected' if sort == 'id' }}>ID</option>
                     </select>
-                    <select name="" id="order_id">
+                    <select id="order_id">
                         <option value="">Desc</option>
                         <option value="asc" {{ 'selected' if order == 'asc' }}>Asc</option>
                     </select>
                     <input type="button" value="Apply" onclick="sortAndOrder()">
-                </form>    
+                </form>
             </div>
         <hr class="border-white w-100 my-0" style="margin-bottom: 1rem !important;">    
         
@@ -162,7 +169,7 @@
                                     <a
                                         onclick="highlightPost({{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }})"
                                         href="#{{ 'r' ~ (reply.reply.id | string) if reply.reply else 't' ~ (reply.thread.id | string) }}"
-                                        class="m-0 text-ellipsis" style="font-size: 11px; color: rgba(0, 255, 166, 0.7);">
+                                        class="m-0 text-ellipsis" style="font-size: 11px; color: var(--post-highlight);">
                                         Replying to: {{ 'r-' ~ (reply.reply.id | string) if reply.reply else 't-' ~ (reply.thread.id | string)}}
                                     </a>
                                 </div>
@@ -235,7 +242,7 @@
                     <div class="d-flex gap-1" id="img-div-t{{ thread.id }}">
                         {% if thread.image %}
                             <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
-                                <img class="rounded-1 shadow img-fluid" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
+                                <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
                                 <div class="d-flex gap-1">
                                     <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
                                     <a style="font-size: 0.7rem;" class="m-0 text-ellipsis" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
@@ -245,7 +252,7 @@
                         {% endif %}
                         <div class="d-flex flex-column gap-1 w-100">
                             
-                            <div id="t{{ thread.id }}" class="chan-admin-thread-info border-info-subtle" style="min-width: 350px; width: fit-content;">
+                            <div id="t{{ thread.id }}" class="chan-admin-thread-info border-white" style="min-width: 350px; width: fit-content;">
                                 <div class="d-flex gap-2">
                                     <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500;">{{ thread.title }}</a>
                                     <div class="d-flex flex-column justify-content-around">
@@ -314,7 +321,7 @@
                             <div class="d-flex gap-1" id="img-div-t{{ thread.id }}">
                                 {% if thread.image %}
                                     <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
-                                        <img class="rounded-1 shadow img-fluid" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
+                                        <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
                                         <div class="d-flex gap-1">
                                             <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
                                             <a style="font-size: 0.7rem;" class="m-0 text-ellipsis" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
@@ -401,7 +408,7 @@
                                 {% endif %}
                                 <div class="d-flex flex-column gap-1 w-100">
                                     
-                                    <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 350px; width: fit-content;">
+                                    <div id="t{{ thread.id }}" class="chan-thread-info" style="min-width: 350px; width: fit-content;">
                                         <div class="d-flex gap-2">
                                             <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                             <div class="d-flex flex-column justify-content-around">
@@ -470,7 +477,7 @@
                                 {% endif %}
                                 <div class="d-flex flex-column gap-1 w-100">
                                     
-                                    <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 350px; width: fit-content;">
+                                    <div id="t{{ thread.id }}" class="chan-thread-info" style="min-width: 350px; width: fit-content;">
                                         <div class="d-flex gap-2">
                                             <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                             <div class="d-flex flex-column justify-content-around">
@@ -569,6 +576,32 @@
     <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/board-thread.js') }}"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const themeLink = document.getElementById("theme-style");
+    
+            // Apply saved style across all pages
+            const savedStyle = localStorage.getItem("selectedStyle") || "board-thread";
+    
+            // Set the href dynamically using the rendered url_for value
+            themeLink.href = "{{ url_for('static', filename='css/') }}" + savedStyle + ".css";
+    
+            // Check if the select dropdown exists
+            const select = document.getElementById("style_id");
+            if (select) {
+                // Set dropdown to match saved style
+                select.value = savedStyle;
+    
+                // Change theme and save selection
+                select.addEventListener("change", function () {
+                    const newStyle = select.value;
+                    localStorage.setItem("selectedStyle", newStyle);
+                    themeLink.href = "{{ url_for('static', filename='css/') }}" + newStyle + ".css";
+                });
+            }
+        });
+    </script>
+    
     {% if api_key %}
         <script>
             async function deletePost(id, post_type){
